public/integrity.css
html {
  background-color: #e0e0e0; }

body {
  font-size: 100%;
  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  color: #333333; }

a {
  color: #ed1556;
  text-decoration: none; }
  a:hover {
    color: white;
    background-color: #ed1556; }

#header, #content, #footer {
  width: 40em;
  margin: 0 auto;
  background: #eeeeee;
  padding: 0 2em;
  z-index: 0;
  position: relative;
  font-size: 1em; }

#header {
  background: white; }
  #header h1 {
    font-weight: bold;
    font-size: 1.5em; }
  #header address.watermark {
    position: absolute;
    font-weight: bold;
    right: 3em;
    top: 0;
    font-size: .75em;
    color: #cccccc; }
    #header address.watermark a {
      color: #cccccc;
      font-weight: bold;
      font-size: 2em; }
      #header address.watermark a:hover {
        background: transparent;
        color: #aaaaaa; }

#content {
  padding-top: 1em;
  padding-bottom: 2em; }
  #content strong {
    font-weight: bold; }
  #content em {
    font-style: italic; }
  #content h1, #content h2, #content h3, #content h4, #content h5, #content h6 {
    color: #4e4e4e; }
  #content h1 {
    font-size: 2em;
    font-weight: bold;
    margin-bottom: .75em;
    padding: .25em 0;
    line-height: 1.2;
    border-bottom: 1px solid silver; }
  #content h2 {
    font-weight: bold;
    font-size: 1.5em;
    margin: 1em 0 .2em; }
  #content h3 {
    font-weight: bold;
    font-size: 1.25em;
    margin: .25em 0; }
  #content h4, #content h5, #content h6 {
    font-weight: bold;
    margin-top: .5em; }
  #content code, #content pre, #content textarea, #content input {
    font-family: Monaco, Deja Vu Sans Mono, Inconsolata, Consolas, monospace; }
  #content pre {
    margin: .5em;
    padding: .5em; }
  #content form p {
    margin-top: 1em;
    position: relative; }
    #content form p.checkbox label {
      margin-top: 0 !important; }
  #content form input.text, #content form textarea, #content form select {
    width: 30em;
    padding: .2em .4em;
    color: #4e4e4e; }
  #content form input.text {
    height: 1.4em; }
  #content form label {
    float: left;
    display: block;
    margin-top: .5em;
    width: 8em;
    margin-right: .75em; }
  #content form .with_errors label {
    background: red;
    color: white;
    position: relative;
    top: -.7em; }
  #content form .with_errors.required label {
    position: static;
    margin-right: .25em;
    padding: 0 .2em; }
  #content form .with_errors input, #content form .with_errors textarea, #content form .with_errors select {
    border: 2px solid #f22;
    background: #fee;
    color: #222222; }
  #content form .required label {
    float: none;
    display: block;
    width: auto;
    position: relative;
    font-weight: bold;
    margin-top: 1em;
    text-indent: -.65em; }
    #content form .required label:before {
      content: "* ";
      color: #ed1556; }
  #content form .required input.text {
    width: 25.6em;
    font-size: 24px;
    font-weight: bold; }
  #content form .normal {
    margin-top: 2em; }
  #content form h2.notifier label {
    float: none;
    width: auto;
    margin-right: 0; }
    #content form h2.notifier label .warning {
      font-size: .5em;
      font-weight: normal;
      color: #999999; }
  #content form fieldset {
    padding-bottom: 1em;
    margin-left: 1.35em;
    border-bottom: 1px solid silver;
    margin-bottom: 1em; }
    #content form fieldset h3 {
      margin-top: 1em;
      margin-bottom: 0; }
    #content form fieldset p.normal {
      margin-top: 1em; }
    #content form fieldset p label {
      width: 6.7em; }
  #content form p.submit {
    margin-top: 2em; }
    #content form p.submit:after {
      display: block;
      clear: both;
      float: none;
      content: ".";
      text-indent: -9999em;
      text-align: left; }
    #content form p.submit.destroy button, #content form p.submit.manual-build button {
      float: none;
      display: inline; }
    #content form p.submit.manual-build button {
      margin-right: 0; }
  #content #build form, #content #last_build form {
    font-size: .75em; }
    #content #build form p.submit, #content #last_build form p.submit {
      margin: 0;
      padding: 0;
      position: absolute;
      right: .5em;
      top: 1.25em; }
  #content .blank_slate p, #content .error p {
    position: relative;
    top: .3em; }
  #content .blank_slate h1, #content .error h1 {
    border-width: 0;
    margin: 0;
    padding: 0; }
    #content .blank_slate h1 button, #content .error h1 button {
      float: none;
      border: 0 none;
      background: transparent;
      display: inline;
      color: #ed1556;
      padding: 0.25em 0;
      margin: 0; }
      #content .blank_slate h1 button:hover, #content .error h1 button:hover {
        background: #ed1556;
        color: white; }
  #content .error dt {
    margin-top: 1.4em;
    margin-bottom: .3em;
    font-size: 1.75em;
    font-family: Georgia, Times New Roman, serif; }
  #content .error dd {
    line-height: 1.4; }
  #content .error .backtrace {
    margin: 1em 0;
    overflow: "scroll";
    height: 30em;
    border: 1px solid silver;
    line-height: 1.6; }
  #content #projects {
    margin: 1em 0 2em;
    border-top: 1px solid silver; }
    #content #projects li {
      position: relative;
      border-bottom: 1px solid silver; }
      #content #projects li.odd {
        background: #e6e6e6; }
      #content #projects li a {
        font-size: 2em;
        padding: .25em;
        line-height: 1.2;
        font-weight: bold;
        display: block; }
        #content #projects li a.success {
          color: #337022; }
        #content #projects li a.failed {
          color: #ff1100; }
        #content #projects li a.building {
          color: #777777; }
      #content #projects li .meta {
        position: absolute;
        right: .6em;
        top: 1.5em;
        font-size: 0.8em;
        color: #999999;
        text-align: right; }
  #content #previous_builds li a {
    display: block;
    padding: .25em;
    margin-bottom: .25em;
    border-width: 1px;
    border-style: solid; }
    #content #previous_builds li a strong {
      font-size: 1.3em; }
    #content #previous_builds li a .attribution {
      font-size: .9em; }
  #content #projects li.success a, #content #previous_builds li.success a {
    background-color: #bbf8aa;
    border-color: #99d688;
    color: #337022; }
    #content #projects li.success a .attribution, #content #previous_builds li.success a .attribution {
      color: #77b466; }
    #content #projects li.success a:hover, #content #previous_builds li.success a:hover {
      background-color: #ddffcc; }
  #content #projects li.failed a, #content #previous_builds li.failed a {
    background-color: #ffbbaa;
    border-color: #dd9988;
    color: #ff1100; }
    #content #projects li.failed a .attribution, #content #previous_builds li.failed a .attribution {
      color: #bb7766; }
    #content #projects li.failed a:hover, #content #previous_builds li.failed a:hover {
      background-color: #ffddcc; }
  #content #projects li.building a, #content #previous_builds li.building a {
    background-color: #cccccc;
    border-color: #aaaaaa;
    color: #777777; }
    #content #projects li.building a .attribution, #content #previous_builds li.building a .attribution {
      color: #888888; }
    #content #projects li.building a:hover, #content #previous_builds li.building a:hover {
      background-color: #eeeeee; }
  #content #build, #content #last_build {
    position: relative; }
    #content #build h1, #content #build blockquote, #content #last_build h1, #content #last_build blockquote {
      border-width: 0 1px;
      border-style: solid; }
    #content #build h1, #content #last_build h1 {
      border-top-width: 1px; }
    #content #build blockquote, #content #last_build blockquote {
      bottom-bottom-width: 1px;
      line-height: 1.4; }
    #content #build h2 a, #content #last_build h2 a {
      font-size: smaller; }
    #content #build.success h1, #content #build.success blockquote, #content #last_build.success h1, #content #last_build.success blockquote {
      background-color: #bbf8aa;
      border-color: #99d688 #ccffbb #ccffbb #99d688; }
    #content #build.success h1, #content #last_build.success h1 {
      color: #337022; }
    #content #build.success .meta, #content #build.success .github a, #content #last_build.success .meta, #content #last_build.success .github a {
      color: #77b466; }
      #content #build.success .meta a:hover, #content #build.success .github a a:hover, #content #last_build.success .meta a:hover, #content #last_build.success .github a a:hover {
        color: #bbf8aa;
        background-color: #337022; }
    #content #build.failed h1, #content #build.failed blockquote, #content #last_build.failed h1, #content #last_build.failed blockquote {
      background-color: #ffbbaa;
      border-color: #dd9988 #ffccbb #ffccbb #dd9988; }
    #content #build.failed h1, #content #last_build.failed h1 {
      color: #ff1100; }
    #content #build.failed .meta, #content #build.failed .github a, #content #last_build.failed .meta, #content #last_build.failed .github a {
      color: #bb7766; }
      #content #build.failed .meta a:hover, #content #build.failed .github a a:hover, #content #last_build.failed .meta a:hover, #content #last_build.failed .github a a:hover {
        color: #ffbbaa;
        background-color: #ff1100; }
    #content #build.building h1, #content #build.building blockquote, #content #last_build.building h1, #content #last_build.building blockquote {
      background-color: #cccccc;
      border-color: #aaaaaa #dddddd #dddddd #aaaaaa; }
    #content #build.building h1, #content #last_build.building h1 {
      color: #777777; }
    #content #build.building .meta, #content #build.building .github a, #content #last_build.building .meta, #content #last_build.building .github a {
      color: #333333; }
      #content #build.building .meta a:hover, #content #build.building .github a a:hover, #content #last_build.building .meta a:hover, #content #last_build.building .github a a:hover {
        color: #cccccc;
        background-color: #777777; }
    #content #build h1, #content #last_build h1 {
      margin-top: .5em;
      margin-bottom: 0;
      padding: .25em;
      color: #337022; }
    #content #build blockquote, #content #last_build blockquote {
      padding: .75em;
      margin-bottom: 2em; }
      #content #build blockquote .meta, #content #last_build blockquote .meta {
        margin-top: 1em;
        display: block;
        font-size: .9em; }
    #content #build pre.output, #content #last_build pre.output {
      background: #111;
      color: #fff;
      padding: .5em;
      overflow: auto;
      max-height: 50em;
      font-size: .825em; }
  #content #push_path {
    display: block;
    margin-top: 1em;
    margin-left: 2em; }

a.success {
  color: #bbf8aa; }
  a.success:hover {
    background-color: #bbf8aa;
    color: white; }
a.failed {
  color: #ffbbaa; }
  a.failed:hover {
    background-color: #ffbbaa;
    color: white; }

#footer {
  padding: 1.5em 2.5em;
  border-top: 1px solid #ccc;
  font-size: .8em;
  width: 50em !important;
  color: #666;
  text-align: right; }
  #footer strong {
    font-weight: bold; }

